# OxideScope

./: cursor.md
scopesentry-rs/: .gitignore  Cargo.toml  README.md
scopesentry-rs/common/: Cargo.lock.README  Cargo.toml
scopesentry-rs/common/src/: lib.rs  models.rs  mongo.rs  rds.rs  settings.rs  util.rs
scopesentry-rs/scanner/: Cargo.toml  README.md
scopesentry-rs/scanner/src/: main.rs
scopesentry-rs/scheduler/: Cargo.toml  README.md
scopesentry-rs/scheduler/src/: main.rs
scopesentry-rs/ui/: README.md  bunfig.toml  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scopesentry-rs/ui/src/: index.css  main.tsx
scopesentry-rs/ui/src/components/ui/: badge.tsx  button.tsx  input.tsx  select.tsx  textarea.tsx
scopesentry-rs/ui/src/lib/: api.ts  config.ts
scopesentry-rs/ui/src/pages/: _layout.tsx  dashboard.tsx  nodes.tsx  task-create.tsx
scopesentry-rs/ui/src/pages/partials/: card.tsx  form-row.tsx  section.tsx
