[package]
name = "scopesentry-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
config = "0.14"
which = "6.0"
async-trait = "0.1"
tokio = { version = "1.38", features = ["full"] }
redis = { version = "0.25", features = ["aio", "tokio-comp", "serde_json"] }
mongodb = "3.2"
bson = { version = "2.12", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
url = "2.5"
regex = "1.10"
hostname = "0.4"
publicsuffix = "2.2"
ipnetwork = "0.20"
ipnet = "2.9"
urlencoding = "2.1"