[package]
name = "scopesentry-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
scopesentry-common = { path = "../common" }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
redis = { version = "0.25", features = ["aio", "tokio-comp", "serde_json"] }
mongodb = "3.2"
bson = { version = "2.12", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
url = "2.5"
hostname = "0.4"
trust-dns-resolver = { version = "0.22", default-features = false, features = ["tokio-runtime"] }
publicsuffix = "2.2"
rsubdomain = "1.2.5"